fix hero overflow

--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
     --white: #ffffff;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     background-color: var(--blue);
 
@@ -81,6 +89,8 @@ section {
 .hero {
     height: 100vh;
     width: 100%;
+    max-width: 100%;
+    overflow: hidden;
 
     background-image: url("https://cdn.pixabay.com/photo/2020/01/29/06/39/boy-4801688_1280.jpg");
     background-size: cover;
